# esp-box-example-slint

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: app.slint  main.rs
